--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
     <div class="row" style="display:flex;justify-content:center">
       <div class="col-xs-12 col-md-6" style="text-align: center;">
         <h3>Welcome to Eastminster Presbyterian Church!</h3>
-        <h4 style="color:white">Our purpose is Celebrating, Sharing, &amp; Connecting God's Lovewith Our Community. We invite YOU to journey with us.</h4>
+        <h4 style="color:white">Our purpose is celebrating, sharing, &amp; connecting God's love with our community. We invite YOU to journey with us.</h4>
       </div>
     </div>
   </div>
@@ -677,7 +677,7 @@
     <div class="row" style="display:flex;justify-content:center">
       <div class="col-xs-12 col-md-6" style="text-align: center;">
         <h3>Welcome to Eastminster Presbyterian Church!</h3>
-        <h4 style="color:white">Our purpose is Celebrating, Sharing, &amp; Connecting God's Lovewith Our Community. We invite YOU to journey with us.</h4>
+        <h4 style="color:white">Our purpose is celebrating, sharing, &amp; connecting God's love with Our community. We invite YOU to journey with us.</h4>
       </div>
     </div>
   </div>
@@ -736,7 +736,7 @@
               </li>
               <br>
               <li><b>What are services like?</b>
-                Pastor Henry makes the services very personal, with real life experiences and stories that bring the bible's teachings to light. There is always free coffee, water and snacks before the service too!
+                Pastor Henry makes the services very personal, with real life experiences and stories that bring the bible's teachings to light. There is always free coffee, water and snacks before and after the service, too!
               </li>
               <br>
               <li><b>How can I donate to your cause?</b>
@@ -873,7 +873,7 @@
           <div style="justify-content:center;display:flex;" class="list-style">
             <div style="font-size: 14pt;" class="col-lg-12 col-sm-6 col-xs-12">
               Whether you can't make it on time or simply live far away, we welcome you to watch online through the link above. We look forward to seeing you... online or in person!
-              If you happen to miss us, see the Worship With Us Page for access to previous services and videos. 
+              If you happen to miss us, see the Worship With Us page for access to previous services and videos. 
             </div>
           </div>
           <br />
