--- a/index.html
+++ b/index.html
@@ -590,6 +590,7 @@
             </div>
           </div>
         </div>
+        <h4>Audio / Video Engineers</h4>
       </div>
       <div class="row">
         <div class="col-md-6">
@@ -597,9 +598,15 @@
             <div class="testimonial-image"> <img src="img/uploads/ministry-team/patti.png" alt=""> </div>
             <div class="testimonial-content">
               <div class="testimonial-meta"> Patti Kuna CP </div>
-              <p>Administration
-
-              </p>
+              <p>Administration</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="testimonial">
+            <div class="testimonial-image"> <img src="img/uploads/ministry-team/tam.jpeg" alt=""> </div>
+            <div class="testimonial-content">
+              <div class="testimonial-meta"> Tamer Fahmy </div>
             </div>
           </div>
         </div>
@@ -614,6 +621,14 @@
             </div>
           </div>
         </div>
+        <div class="col-md-6">
+          <div class="testimonial">
+            <div class="testimonial-image"> <img src="img/uploads/ministry-team/tom.jpeg" alt=""> </div>
+            <div class="testimonial-content">
+              <div class="testimonial-meta"> Tom Clauser </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="row">
         <div class="col-md-6">
@@ -625,29 +640,7 @@
             </div>
           </div>
         </div>
-        <p class="testimonial">Neil began playing piano and organ in churches when he was in his early teens, directed church choirs for more than 35 years, served as a Sunday School teacher, Deacon, Elder, and on the Board of Christian Education.</p>
-      </div>
-      <br />
-      <br />
-      <div class="row">
-        <h4>Audio / Video Engineers</h4>
-        <div class="col-md-4">
-          <div class="testimonial">
-            <div class="testimonial-image"> <img src="img/uploads/ministry-team/tam.jpeg" alt=""> </div>
-            <div class="testimonial-content">
-              <div class="testimonial-meta"> Tamer Fahmy </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="testimonial">
-            <div class="testimonial-image"> <img src="img/uploads/ministry-team/tom.jpeg" alt=""> </div>
-            <div class="testimonial-content">
-              <div class="testimonial-meta"> Tom Clauser </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
           <div class="testimonial">
             <div class="testimonial-image"> <img src="img/uploads/ministry-team/josh.jpg" alt=""> </div>
             <div class="testimonial-content">
