--- a/index.html
+++ b/index.html
@@ -580,7 +580,6 @@
     <div class="section-title">
       <h2>Our Ministry Team</h2>
     </div>
-      <div class="row">
         <div class="col-md-6">
           <div class="testimonial">
             <div class="testimonial-image"> <img src="img/uploads/ministry-team/henry.png" alt=""> </div>
@@ -590,9 +589,16 @@
             </div>
           </div>
         </div>
-        <h3>Audio / Video Engineers</h3>
-      </div>
-      <div class="row">
+       <div class="col-md-6">
+          <div class="testimonial">
+            <div class="testimonial-image"> <img src="img/uploads/ministry-team/tam.jpeg" alt=""> </div>
+            <div class="testimonial-content">
+              <div class="testimonial-meta"> Tamer Fahmy </div>
+              <p>Audio / Visual Engineer</p>
+            </div>
+          </div>
+        </div>
+      
         <div class="col-md-6">
           <div class="testimonial">
             <div class="testimonial-image"> <img src="img/uploads/ministry-team/patti.png" alt=""> </div>
@@ -602,16 +608,6 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="testimonial">
-            <div class="testimonial-image"> <img src="img/uploads/ministry-team/tam.jpeg" alt=""> </div>
-            <div class="testimonial-content">
-              <div class="testimonial-meta"> Tamer Fahmy </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
         <div class="col-md-6">
           <div class="testimonial">
             <div class="testimonial-image"> <img src="img/uploads/ministry-team/doug.png" alt=""> </div>
@@ -626,11 +622,10 @@
             <div class="testimonial-image"> <img src="img/uploads/ministry-team/tom.jpeg" alt=""> </div>
             <div class="testimonial-content">
               <div class="testimonial-meta"> Tom Clauser </div>
+              <p>Audio / Visual Engineer</p>
             </div>
           </div>
         </div>
-      </div>
-      <div class="row">
         <div class="col-md-6">
           <div class="testimonial">
             <div class="testimonial-image"> <img src="img/uploads/ministry-team/neal.jpeg" alt=""> </div>
@@ -645,10 +640,10 @@
             <div class="testimonial-image"> <img src="img/uploads/ministry-team/josh.jpg" alt=""> </div>
             <div class="testimonial-content">
               <div class="testimonial-meta"> Josh Romesburg </div>
+              <p>Audio / Visual Engineer</p>
             </div>
           </div>
         </div>
-      </div>
   </div>
 </div>
 
