--- a/index.html
+++ b/index.html
@@ -672,14 +672,15 @@
 
 <div id="about">
   <div id="worship" class="container">
-    <div class="row">
-      <div style="outline:black;" class="col-xs-12 col-md-6"> 
+    <div class="row" style="justify-content:center;display:flex">
+      <div style="outline:black;" class="col-xs-12 col-md-4"> 
         <div style="text-align: center;" class="about-text">
-          <h3>New here?</h3>Eastminster Presbyterian Church is part of the Presbyterian Church (USA) and the Presbytery of Lake Erie.
-            
+          <h3>New here?</h3>
+            Eastminster Presbyterian Church is part of the Presbyterian Church (USA) and the Presbytery of Lake Erie.
           </div>
       </div>
-      <div class="col-xs-12 col-md-6">
+      <div class="col-xs-12 col-md-2"></div>
+      <div class="col-xs-12 col-md-4">
         <div style="text-align: center;" class="about-text">
         <h4>Ways to connect with us:</h4>
         
