--- a/worship.html
+++ b/worship.html
@@ -63,7 +63,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <a style="margin-top:-25px" class="navbar-brand page-scroll" href="#page-top"><img style="height:65px;vertical-align: center;" src="img/uploads/logo-transparent-bg2.png"></a>
+      <a style="margin-top:-25px" class="navbar-brand page-scroll" href="https://www.eastminstererie.com"><img style="height:65px;vertical-align: center;" src="img/uploads/logo-transparent-bg2.png"></a>
     </div>
 
 
