--- a/about.html
+++ b/about.html
@@ -267,21 +267,17 @@
   </div>
 </div>
 
-<!-- Contact Section -->
-<div id="contact">
+
+<div id="epyk">
   <div class="container">
     <div class="col-md-12">
-      
-      <div class="row">
-        <div class="social">
-          <p>&copy; <script>document.write(new Date().getFullYear());</script> Eastminster Presbyterian Church 
-            <br />
-            <a style="color:#00A1FF" href="/terms-and-conditions">Terms & Conditions</a> | <a style="color:#00A1FF" href="/privacy-policy">Privacy Policy</a>
-            <br />
-            Designed by <a style="color:#00A1FF" href="https://www.epykwebsites.com">EPYK Websites</a>
-        
+      <div class="row" style="text-align:center">
+        <p>&copy; <script>document.write(new Date().getFullYear());</script> Eastminster Presbyterian Church 
+          <br />
+          <a style="color:#00A1FF" href="/terms-and-conditions">Terms & Conditions</a> | <a style="color:#00A1FF" href="/privacy-policy">Privacy Policy</a>
+          <br />
+          Designed by <a style="color:#00A1FF" href="https://www.epykwebsites.com">EPYK Websites</a>
         </p>
-        </div>
       </div>
     </div>
   </div>
