--- a/index.html
+++ b/index.html
@@ -435,23 +435,24 @@
       </a>
     </div>
     <!-- End Social Icons -->
+  </div>
+</div>
 
+<div id="epyk">
+  <div class="container">
     <div class="col-md-12">
-      
-      <div class="row">
-        <div class="social">
-          <p>&copy; <script>document.write(new Date().getFullYear());</script> Eastminster Presbyterian Church 
-            <br />
-            <a style="color:#00A1FF" href="/terms-and-conditions">Terms & Conditions</a> | <a style="color:#00A1FF" href="/privacy-policy">Privacy Policy</a>
-            <br />
-            Designed by <a style="color:#00A1FF" href="https://www.epykwebsites.com">EPYK Websites</a>
-        
+      <div class="row" style="text-align:center">
+        <p>&copy; <script>document.write(new Date().getFullYear());</script> Eastminster Presbyterian Church 
+          <br />
+          <a style="color:#00A1FF" href="/terms-and-conditions">Terms & Conditions</a> | <a style="color:#00A1FF" href="/privacy-policy">Privacy Policy</a>
+          <br />
+          Designed by <a style="color:#00A1FF" href="https://www.epykwebsites.com">EPYK Websites</a>
         </p>
-        </div>
       </div>
     </div>
   </div>
 </div>
+
 <!-- Footer Section -->
 
 <div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#f4b214"/></svg></div>
