updates to formatting

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <li><a href="/connect" class="page-scroll">Connect With Us</a></li>
         <li><a href="/worship" class="page-scroll">Worship With Us</a></li>
         <li><a href="/serve" class="page-scroll">Serve With Us</a></li>
-        <li><a href="/watch-live" class="page-scroll" style="background-clip: content-box;color:white;background-color: green;">Watch Live</a></li>
+        <li><a href="/worship" class="page-scroll" style="background-clip: content-box;color:white;background-color: green;">Watch Live</a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse --> 
@@ -222,27 +222,27 @@
     </div>
     <br />
     <br />
-    <div class="row" style="justify-content: center;text-align: center;">
+    <div class="row" style="justify-content:center;text-align:center;">
       <div class="container col-lg-6">
       <div style="padding-top:5cqb;display:inline-block;">
         <h3>Or join us online, right where you are!</h3>
       </div></div>
-      <div class="container col-sm-12 col-lg-6">
-        <div style="padding-right:35px;display:inline-block;">
+      <div class="container col-sm-12 col-lg-6" style="display:flex;justify-content:center;">
+        <div style="display:inline-block;">
           <img src="img/uploads/click-here.png" style="width:125px">
         </div>
-        <div style="padding-right:35px;display:inline-block;">
+        <div style="padding-right:35px;padding-left:35px">
         <a title="Eastminster Presbyterian Church Zoom - Erie, PA" href="https://us02web.zoom.us/j/4987043991?pwd=c0k5ZnVHQnMxa0VRMXVoNVBxWWFrdz09" target="_blank">
           <img src="img/uploads/zoom-live.png" style="width:125px">
         </a>
         </div>
-        <div style="display:inline-block;">
+        <div>
           <a title="Eastminster Presbyterian Church Facebook LIVE - Erie, PA" href="https://www.facebook.com/100064621632291/live" target="_blank">
             <img src="img/uploads/facebook-live.png" style="width:125px">
           </a>
         </div>
       </div>
-    </div>  
+    </div>
   </div>
 </div>
 
@@ -388,6 +388,7 @@
       <div class="col-xs-12 col-md-6 col-md-offset-1">
         <h3>Let us think about how we may offer our time, our talents, or any other good gifts we have received from the Lord to benefit and further God's will for his creation.</h3>
       </div>
+      <br />
       <div class="col-xs-12 col-md-4 text-center"><a target="_blank" href="https://www.powr.io/checkout_screen?unique_label=ceb35473_1623442279" class="btn btn-custom btn-lg page-scroll">Give Now</a></div>
     </div>
   </div>
