--- a/serve.html
+++ b/serve.html
@@ -75,7 +75,7 @@
         <li><a href="/connect" class="page-scroll">Connect With Us</a></li>
         <li><a href="/worship" class="page-scroll">Worship With Us</a></li>
         <li><a href="/serve" class="page-scroll">Serve With Us</a></li>
-        <li><a href="/watch-live" class="page-scroll" style="background-clip: content-box;color:white;background-color: green;">Watch Live</a></li>
+        <li><a href="/worship" class="page-scroll" style="background-clip: content-box;color:white;background-color: green;">Watch Live</a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse --> 
@@ -95,7 +95,7 @@
 
 <div id="about">
   <div id="worship" class="container">
-    <div class="row">
+    <div class="row" style="border-bottom:solid">
       <div class="col-xs-12 col-md-6"> 
         <img id="about-img" src="img/uploads/1.jpeg" class="img-responsive" alt=""> 
       </div>
@@ -111,11 +111,14 @@
     </div>
     <br />
     <br />
-    <div class="row">
+    <div class="row" style="border-bottom:solid">
       <div style="margin-top:50px" class="col-lg-6 section-title">
         <h3>Food Pantry</h3>
         <p>
           Our congregation participates in the Wesleyville Interfaith Food Pantry located at <a href="https://goo.gl/maps/wjpKMbTTbw7M8dRMA" target="_blank">2041 Station Road, Erie, PA 16510</a>. This Food Pantry serves people in Wesleyville, Lawrence Park and part of East Erie. Food distribution is every 3rd Tuesday from 10am - 11:30am, and 5pm - 6pm. For more information call <a href="tel:814-455-7819" data-rel="external">(814) 455-7819</a>.
+          <br />
+          <br />
+          <br />
         </p>
       </div>
       <div class="col-xs-12 col-md-6"> 
@@ -124,7 +127,7 @@
     </div>
     <br />
     <br />
-    <div class="row">
+    <div class="row" style="border-bottom:solid">
       <div class="col-xs-12 col-md-6"> 
         <img id="about-img" src="img/uploads/2.jpeg" class="img-responsive" alt=""> 
       </div>
@@ -134,12 +137,16 @@
           Bring up your children to know God. Then, they will grow up to know life is not about getting money and buying stuff. True life is about worshipping and enjoying God, through His Son, Jesus Christ.
           <br />
           Join us for Kids for Christ at 10am on Sundays!
+          <br />
+          <br />
+          <br />
+          <br />
         </p>
       </div>
     </div>
     <br />
     <br />
-    <div class="row">
+    <div class="row" style="border-bottom:solid">
       <div style="margin-top:50px" class="col-lg-6 section-title">
         <h3>Prayer Shawl</h3>
         <p>Prayer Shawls are symbolic of our unconditionally LOVING GOD. Those who receive a shawl are UPLIFTED and affirmed, as if given wings to fly above their troubles. Whether a shawl or blanket, each is made with love, PRAYING HANDS and caring hearts.</p>
