--- a/worship.html
+++ b/worship.html
@@ -75,7 +75,7 @@
         <li><a href="/connect" class="page-scroll">Connect With Us</a></li>
         <li><a href="/worship" class="page-scroll">Worship With Us</a></li>
         <li><a href="/serve" class="page-scroll">Serve With Us</a></li>
-        <li><a href="/watch-live" class="page-scroll" style="background-clip: content-box;color:white;background-color: green;">Watch Live</a></li>
+        <li><a href="/worship" class="page-scroll" style="background-clip: content-box;color:white;background-color: green;">Watch Live</a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse --> 
@@ -83,18 +83,30 @@
 </nav>
 
 
-<div class="container" style="justify-content:center;display:flex;">
-  <div id="facebook">
+<div style="padding-top:175px;padding-bottom:50px;display:flex" class="container">
+  <div id="facebook" style="float:right">
     <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2F100064621632291&tabs=timeline&width=500&height=600&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="100%" height="600" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
   </div>
 </div>
+
+<!--
+
+  
+  <div style="text-align:right;float:right">
+      <iframe src="https://www.youtube.com/embed/videoseries?list=PLWpYSJ4QogBqNOPo8H-KEBISZqaGaqDFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/videoseries?list=PLWpYSJ4QogBqNOPo8H-KEBISZqaGaqDFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/videoseries?list=PLWpYSJ4QogBqNOPo8H-KEBISZqaGaqDFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/videoseries?list=PLWpYSJ4QogBqNOPo8H-KEBISZqaGaqDFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  </div>
+
+
 
 <div style="text-align:center">
 <iframe src="https://www.youtube.com/embed/videoseries?list=PLWpYSJ4QogBqNOPo8H-KEBISZqaGaqDFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <iframe src="https://www.youtube.com/embed/videoseries?list=PLWpYSJ4QogBqNOPo8H-KEBISZqaGaqDFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <iframe src="https://www.youtube.com/embed/videoseries?list=PLWpYSJ4QogBqNOPo8H-KEBISZqaGaqDFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
-
+-->
 
 
 
@@ -115,16 +127,16 @@
             </div>
           </div>
           <br />
-          <div class="container col-sm-12 col-lg-12">
-            <div style="padding-right:35px;display:inline-block;">
+          <div class="container col-sm-12 col-lg-6" style="display:flex;justify-content:center;">
+            <div style="display:inline-block;">
               <img src="img/uploads/click-here.png" style="width:125px">
             </div>
-            <div style="padding-right:35px;display:inline-block;">
+            <div style="padding-right:35px;padding-left:35px">
             <a title="Eastminster Presbyterian Church Zoom - Erie, PA" href="https://us02web.zoom.us/j/4987043991?pwd=c0k5ZnVHQnMxa0VRMXVoNVBxWWFrdz09" target="_blank">
               <img src="img/uploads/zoom-live.png" style="width:125px">
             </a>
             </div>
-            <div style="display:inline-block;">
+            <div>
               <a title="Eastminster Presbyterian Church Facebook LIVE - Erie, PA" href="https://www.facebook.com/100064621632291/live" target="_blank">
                 <img src="img/uploads/facebook-live.png" style="width:125px">
               </a>
