--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
         <li><a href="/connect" class="page-scroll">Connect With Us</a></li>
         <li><a href="/worship" class="page-scroll">Worship With Us</a></li>
         <li><a href="/serve" class="page-scroll">Serve With Us</a></li>
-        <li><a href="/watch-live" class="page-scroll" style="background-clip: content-box;color:white;background-color: green;">Watch Live</a></li>
+        <li><a href="/worship" class="page-scroll" style="background-clip: content-box;color:white;background-color: green;">Watch Live</a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse --> 
