--- a/connect.html
+++ b/connect.html
@@ -75,7 +75,7 @@
         <li><a href="/connect" class="page-scroll">Connect With Us</a></li>
         <li><a href="/worship" class="page-scroll">Worship With Us</a></li>
         <li><a href="/serve" class="page-scroll">Serve With Us</a></li>
-        <li><a href="/watch-live" class="page-scroll" style="background-clip: content-box;color:white;background-color: green;">Watch Live</a></li>
+        <li><a href="/worship" class="page-scroll" style="background-clip: content-box;color:white;background-color: green;">Watch Live</a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse --> 
@@ -98,18 +98,19 @@
 <div id="about">
   <div id="worship" class="container">
     <div class="row" style="justify-content:center;display:flex">
-      <div style="outline:black;" class="col-xs-12 col-md-4"> 
-        <div style="text-align: center;" class="about-text">
-          <br />
+      <div style="outline:black;outline-style:solid;" class="col-xs-12 col-md-4"> 
+        <div style="float:left;text-align: center;" class="about-text">
           <br />
           <br />
           <h3>New here?</h3>
-            Eastminster Presbyterian Church is part of the Presbyterian Church (USA) and the Presbytery of Lake Erie.
-          </div>
+          Eastminster Presbyterian Church is part of the Presbyterian Church (USA) and the Presbytery of Lake Erie.
+
+
+        </div>
       </div>
       <div class="col-xs-12 col-md-2"></div>
-      <div class="col-xs-12 col-md-4">
-        <div style="text-align: center;" class="about-text">
+      <div style="outline:black;outline-style: solid;" class="col-xs-12 col-md-4">
+        <div style="float:right;text-align:center;" class="about-text">
         <h4>Ways to connect with us:</h4>
         <ul style="list-style-position: inside;">
           <li>
@@ -132,14 +133,18 @@
       </div>
     </div>
 
+    <br />
+    <br />
+    
     <div class="container">
       <div style="display:flex;justify-content:center">
-        <div class="row col-xs-12 col-md-8 col-lg-8">
+        <div style="justify-content:center;display:flex;" class="row col-xs-12 col-md-8 col-lg-8">
           <div style="padding-top:50px" class="col-xs-10 col-md-12 col-lg-12">
-            <div style="text-align: center">
+            <div style="text-align:center">
               <p style="padding-top:0px;font-size:65pt;font-weight: bold;">FAQs</p>
             </div>
-            <br><br>
+            <br />
+            <br />
             <ul>
               <li><b>What do I wear?</b>
                 There is no dress code! We suggest wearing whatever makes you feel most comfortable.
@@ -158,9 +163,10 @@
               </li>
             </ul>
           </div>
-          
         </div>
       </div>
+      <br />
+      <br />
       <div style="text-align: center;">
         <a href="#about" class="btn btn-custom btn-lg page-scroll">Click here to subscribe</a>
       </div>
