--- a/connect.html
+++ b/connect.html
@@ -108,7 +108,7 @@
 
         </div>
       </div>
-      <div class="col-xs-12 col-md-2"></div>
+      <div class="col-xs-4 col-md-2 col-sm-2"></div>
       <div style="outline:black;outline-style: solid;" class="col-xs-12 col-md-4">
         <div style="float:right;text-align:center;" class="about-text">
         <h4>Ways to connect with us:</h4>
