--- a/serve.html
+++ b/serve.html
@@ -146,7 +146,7 @@
     </div>
     <br />
     <br />
-    <div class="row" style="border-bottom:solid">
+    <div class="row">
       <div style="margin-top:50px" class="col-lg-6 section-title">
         <h3>Prayer Shawl</h3>
         <p>Prayer Shawls are symbolic of our unconditionally LOVING GOD. Those who receive a shawl are UPLIFTED and affirmed, as if given wings to fly above their troubles. Whether a shawl or blanket, each is made with love, PRAYING HANDS and caring hearts.</p>
