--- a/index.html
+++ b/index.html
@@ -228,10 +228,7 @@
         <h3>Or join us online, right where you are!</h3>
       </div></div>
       <div class="container col-sm-12 col-lg-6" style="display:flex;justify-content:center;">
-        <div style="display:inline-block;">
-          <img src="img/uploads/click-here.png" style="width:125px">
-        </div>
-        <div style="padding-right:35px;padding-left:35px">
+        <div style="padding-right:35px">
         <a title="Eastminster Presbyterian Church Zoom - Erie, PA" href="https://us02web.zoom.us/j/4987043991?pwd=c0k5ZnVHQnMxa0VRMXVoNVBxWWFrdz09" target="_blank">
           <img src="img/uploads/zoom-live.png" style="width:125px">
         </a>
