--- a/worship.html
+++ b/worship.html
@@ -83,7 +83,7 @@
 </nav>
 
 
-<div style="padding-top:175px;padding-bottom:50px;display:flex" class="container">
+<div style="padding-top:10em;padding-bottom:50px;display:flex" class="container">
   <div id="facebook" style="float:right">
     <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2F100064621632291&tabs=timeline&width=500&height=600&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="100%" height="600" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
   </div>
@@ -128,10 +128,7 @@
           </div>
           <br />
           <div class="container col-sm-12 col-lg-6" style="display:flex;justify-content:center;">
-            <div style="display:inline-block;">
-              <img src="img/uploads/click-here.png" style="width:125px">
-            </div>
-            <div style="padding-right:35px;padding-left:35px">
+            <div style="padding-right:35px">
             <a title="Eastminster Presbyterian Church Zoom - Erie, PA" href="https://us02web.zoom.us/j/4987043991?pwd=c0k5ZnVHQnMxa0VRMXVoNVBxWWFrdz09" target="_blank">
               <img src="img/uploads/zoom-live.png" style="width:125px">
             </a>
