--- a/worship.html
+++ b/worship.html
@@ -127,7 +127,7 @@
             </div>
           </div>
           <br />
-          <div class="container col-sm-12 col-lg-6" style="display:flex;justify-content:center;">
+          <div class="container col-sm-12 col-lg-12" style="display:flex;justify-content:center;text-align: center;">
             <div style="padding-right:35px">
             <a title="Eastminster Presbyterian Church Zoom - Erie, PA" href="https://us02web.zoom.us/j/4987043991?pwd=c0k5ZnVHQnMxa0VRMXVoNVBxWWFrdz09" target="_blank">
               <img src="img/uploads/zoom-live.png" style="width:125px">
