--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/index.html" class="page-scroll">Home</a></li>
-        <li><a href="/about.html" class="page-scroll">About Us</a></li>
-        <li><a href="/connect.html" class="page-scroll">Connect With Us</a></li>
-        <li><a href="/worship.html" class="page-scroll">Worship With Us</a></li>
-        <li><a href="/serve.html" class="page-scroll">Serve With Us</a></li>
-        <li><a href="/worship.html" class="page-scroll" style="background-clip: content-box;color:white;background-color: green;">Watch Live</a></li>
+        <li><a href="/www.eastminstererie.tk/index.html" class="page-scroll">Home</a></li>
+        <li><a href="/www.eastminstererie.tk/about.html" class="page-scroll">About Us</a></li>
+        <li><a href="/www.eastminstererie.tk/connect.html" class="page-scroll">Connect With Us</a></li>
+        <li><a href="/www.eastminstererie.tk/worship.html" class="page-scroll">Worship With Us</a></li>
+        <li><a href="/www.eastminstererie.tk/serve.html" class="page-scroll">Serve With Us</a></li>
+        <li><a href="/www.eastminstererie.tk/worship.html" class="page-scroll" style="background-clip: content-box;color:white;background-color: green;">Watch Live</a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse --> 
