--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -92,11 +92,11 @@
     
     <div class="container">
       <div style="display:flex;justify-content:center">
-        <div style="justify-content:center;display:flex;" class="row col-xs-12 col-md-8 col-lg-12">
+        <div style="justify-content:center;display:flex;" class="row col-xs-12 col-md-10 col-lg-12">
           <div style="padding-top:50px" class="col-xs-10 col-md-12 col-lg-12">
             <font color="black" size="24">Privacy Policy</font>
                 <br />
-                <p>Last updated 2/24/2024</p>.
+                <p>Last updated 2/24/2024</p>
                 
                 <p style='margin:0in;text-align:justify;line-height:normal;font-size:15px;font-family:"Arial",sans-serif;color:#434343;'><span style="color:#AEAAAA;">&nbsp;</span></p>
                 <p style='margin:0in;text-align:justify;line-height:normal;font-size:15px;font-family:"Arial",sans-serif;color:#434343;'><strong><span style="font-size:21px;color:black;">INTRODUCTION</span></strong></p>
