--- a/serve.html
+++ b/serve.html
@@ -96,7 +96,7 @@
 <div id="about">
   <div id="worship" class="container">
     <div class="row" style="border-bottom:solid">
-      <div class="col-xs-12 col-md-6"> 
+      <div class="col-xs-12 col-md-6" style="margin-bottom:50px"> 
         <img id="about-img" src="img/uploads/1.jpeg" class="img-responsive" alt=""> 
       </div>
       <div style="margin-top:50px" class="col-lg-6 section-title">
@@ -116,19 +116,14 @@
         <h3>Food Pantry</h3>
         <p>
           Our congregation participates in the Wesleyville Interfaith Food Pantry located at <a href="https://goo.gl/maps/wjpKMbTTbw7M8dRMA" target="_blank">2041 Station Road, Erie, PA 16510</a>. This Food Pantry serves people in Wesleyville, Lawrence Park and part of East Erie. Food distribution is every 3rd Tuesday from 10am - 11:30am, and 5pm - 6pm. For more information call <a href="tel:814-455-7819" data-rel="external">(814) 455-7819</a>.
-          <br />
-          <br />
-          <br />
         </p>
       </div>
-      <div class="col-xs-12 col-md-6"> 
+      <div class="col-xs-12 col-md-6" style="margin-bottom:50px">
         <img id="about-img" src="img/uploads/4.jpeg" class="img-responsive" alt=""> 
       </div>
     </div>
-    <br />
-    <br />
-    <div class="row" style="border-bottom:solid">
-      <div class="col-xs-12 col-md-6"> 
+    <div class="row" style="border-bottom:solid;margin-top:50px">
+      <div class="col-xs-12 col-md-6" style="margin-bottom:50px;"> 
         <img id="about-img" src="img/uploads/2.jpeg" class="img-responsive" alt=""> 
       </div>
       <div style="margin-top:50px" class="col-lg-6 section-title">
@@ -137,10 +132,6 @@
           Bring up your children to know God. Then, they will grow up to know life is not about getting money and buying stuff. True life is about worshipping and enjoying God, through His Son, Jesus Christ.
           <br />
           Join us for Kids for Christ at 10am on Sundays!
-          <br />
-          <br />
-          <br />
-          <br />
         </p>
       </div>
     </div>
