--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2 intro-text">
             <h1 id="intro-name">Celebrating, Sharing, & Connecting God's Love with Our Community</h1><br />
-            <a href="#about" class="btn btn-custom btn-lg page-scroll">Learn More</a>
+            <a href="/about" class="btn btn-custom btn-lg page-scroll">Learn More</a>
           </div>
         </div>
       </div>
@@ -273,7 +273,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-md-6"> <img src="img/about.jpg" class="img-responsive" alt=""> </div>
+      <div class="col-xs-12 col-md-6" style="justify-content:right;display:flex"> <img style="width:400px" src="img/uploads/connect.JPG" class="img-responsive" alt=""> </div>
     </div>
   </div>
 </div>
