--- a/serve.html
+++ b/serve.html
@@ -160,7 +160,7 @@
       <div class="row" style="text-align:center">
         <p>&copy; <script>document.write(new Date().getFullYear());</script> Eastminster Presbyterian Church 
           <br />
-          <a style="color:#00A1FF" href="/terms-and-conditions">Terms & Conditions</a> | <a style="color:#00A1FF" href="/privacy-policy">Privacy Policy</a>
+          <a style="color:#00A1FF" href="/terms-and-conditions.html">Terms & Conditions</a> | <a style="color:#00A1FF" href="/privacy-policy.html">Privacy Policy</a>
           <br />
           Designed by <a style="color:#00A1FF" href="https://www.epykwebsites.com">EPYK Websites</a>
         </p>
