--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2 intro-text">
             <h1 id="intro-name">Celebrating, Sharing, & Connecting God's Love with Our Community</h1><br />
-            <a href="/about" class="btn btn-custom btn-lg page-scroll">Learn More</a>
+            <a href="/about.html" class="btn btn-custom btn-lg page-scroll">Learn More</a>
           </div>
         </div>
       </div>
@@ -273,7 +273,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-md-6" style="justify-content:right;display:flex"> <img style="width:400px" src="img/uploads/connect.JPG" class="img-responsive" alt=""> </div>
+      <div class="col-xs-12 col-md-6" style="justify-content:right;display:flex"> <img style="width:100%" src="img/uploads/connect.JPG" class="img-responsive" alt=""> </div>
     </div>
   </div>
 </div>
@@ -442,7 +442,7 @@
       <div class="row" style="text-align:center">
         <p>&copy; <script>document.write(new Date().getFullYear());</script> Eastminster Presbyterian Church 
           <br />
-          <a style="color:#00A1FF" href="/terms-and-conditions">Terms & Conditions</a> | <a style="color:#00A1FF" href="/privacy-policy">Privacy Policy</a>
+          <a style="color:#00A1FF" href="/terms-and-conditions.html">Terms & Conditions</a> | <a style="color:#00A1FF" href="/privacy-policy.html">Privacy Policy</a>
           <br />
           Designed by <a style="color:#00A1FF" href="https://www.epykwebsites.com">EPYK Websites</a>
         </p>
