--- a/about.html
+++ b/about.html
@@ -274,7 +274,7 @@
       <div class="row" style="text-align:center">
         <p>&copy; <script>document.write(new Date().getFullYear());</script> Eastminster Presbyterian Church 
           <br />
-          <a style="color:#00A1FF" href="/terms-and-conditions.html">Terms & Conditions</a> | <a style="color:#00A1FF" href="/privacy-policy.html">Privacy Policy</a>
+          <a style="color:#00A1FF" href="//www.eastminstererie.tk/terms-and-conditions.html">Terms & Conditions</a> | <a style="color:#00A1FF" href="//www.eastminstererie.tk/privacy-policy.html">Privacy Policy</a>
           <br />
           Designed by <a style="color:#00A1FF" href="https://www.epykwebsites.com">EPYK Websites</a>
         </p>
