--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -264,7 +264,7 @@
           <p style='margin:0in;font-size:16px;font-family:"Times New Roman",serif;color:black;line-height:150%;'><span style='font-family:"Arial",sans-serif;'>&nbsp;</span></p>
           <h1 style='margin:0in;text-align:left;line-height:150%;font-size:19px;font-family:"Arial",sans-serif;color:black;'><span style="font-size:21px;line-height:150%;">PRIVACY POLICY</span></h1>
           <p style='margin:0in;font-size:16px;font-family:"Times New Roman",serif;color:black;'>&nbsp;</p>
-          <p style='margin:0in;font-size:16px;font-family:"Times New Roman",serif;color:black;line-height:150%;'><span style='font-family:"Arial",sans-serif;'>We care about data privacy and security. Please review our <a href="/privacy-policy.html">Privacy Policy</a>. By using the Site, you agree to be bound by our Privacy Policy, which is incorporated into these Terms and Conditions. Please be advised the Site is hosted in the United States.&nbsp;</span></p>
+          <p style='margin:0in;font-size:16px;font-family:"Times New Roman",serif;color:black;line-height:150%;'><span style='font-family:"Arial",sans-serif;'>We care about data privacy and security. Please review our <a href="//www.eastminstererie.tk/privacy-policy.html">Privacy Policy</a>. By using the Site, you agree to be bound by our Privacy Policy, which is incorporated into these Terms and Conditions. Please be advised the Site is hosted in the United States.&nbsp;</span></p>
           <p style='margin:0in;font-size:16px;font-family:"Times New Roman",serif;color:black;line-height:150%;'><span style='font-family:"Arial",sans-serif;'>&nbsp;</span></p>
           <p style='margin:0in;font-size:16px;font-family:"Times New Roman",serif;color:black;line-height:150%;'><span style='font-family:"Arial",sans-serif;'>If you access the Site from the European Union, Asia, or any other region of the world with laws or other requirements governing personal data collection, use, or disclosure that differ from applicable laws in the United States, then through your continued use of the Site, you are transferring your data to the United States, and you expressly consent to have your data transferred to and processed in the United States.</span><span style='font-family:"Verdana",sans-serif;'>&nbsp;</span></p>
           <p style='margin:0in;font-size:16px;font-family:"Times New Roman",serif;color:black;line-height:150%;'><span style='font-family:"Verdana",sans-serif;'>&nbsp;</span></p>
@@ -482,7 +482,7 @@
       <div class="row" style="text-align:center">
         <p>&copy; <script>document.write(new Date().getFullYear());</script> Eastminster Presbyterian Church 
           <br />
-          <a style="color:#00A1FF" href="/terms-and-conditions.html">Terms & Conditions</a> | <a style="color:#00A1FF" href="/privacy-policy.html">Privacy Policy</a>
+          <a style="color:#00A1FF" href="//www.eastminstererie.tk/terms-and-conditions.html">Terms & Conditions</a> | <a style="color:#00A1FF" href="//www.eastminstererie.tk/privacy-policy.html">Privacy Policy</a>
           <br />
           Designed by <a style="color:#00A1FF" href="https://www.epykwebsites.com">EPYK Websites</a>
         </p>
