--- a/worship.html
+++ b/worship.html
@@ -83,11 +83,7 @@
 </nav>
 
 
-<div style="padding-top:10em;padding-bottom:50px;display:flex" class="container">
-  <div id="facebook" style="float:right">
-    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2F100064621632291&tabs=timeline&width=500&height=600&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="100%" height="600" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-  </div>
-</div>
+
 
 <!--
 
@@ -111,7 +107,7 @@
 
 
 
-<div id="about">
+<div id="about" style="padding-top:10em;">
   <div id="worship" class="container">
     <div class="row">
       <div class="col-xs-12 col-md-6"> 
@@ -156,6 +152,24 @@
   </div>
 </div>
 
+<div style="padding-top:50px;padding-bottom:50px" class="container col-lg-12">
+  <div id="facebook" class="col-lg-8" style="text-align:right">
+    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2F100064621632291&tabs=timeline&width=500&height=600&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="100%" height="600" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+  </div>
+  <div class="col-lg-4" style="text-align:right">
+    <iframe src="https://www.youtube.com/embed/videoseries?list=PLWpYSJ4QogBqNOPo8H-KEBISZqaGaqDFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/videoseries?list=PLWpYSJ4QogBqNOPo8H-KEBISZqaGaqDFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <br />
+    <iframe src="https://www.youtube.com/embed/videoseries?list=PLWpYSJ4QogBqNOPo8H-KEBISZqaGaqDFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/videoseries?list=PLWpYSJ4QogBqNOPo8H-KEBISZqaGaqDFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <br />
+    <iframe src="https://www.youtube.com/embed/videoseries?list=PLWpYSJ4QogBqNOPo8H-KEBISZqaGaqDFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/videoseries?list=PLWpYSJ4QogBqNOPo8H-KEBISZqaGaqDFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <br />
+    <iframe src="https://www.youtube.com/embed/videoseries?list=PLWpYSJ4QogBqNOPo8H-KEBISZqaGaqDFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/videoseries?list=PLWpYSJ4QogBqNOPo8H-KEBISZqaGaqDFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
+</div>
 
 <div id="epyk">
   <div class="container">
